Prevent RecipeGrid from stretch to fit IngCompGrid

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,4 +39,5 @@ body {
   row-gap: 20px;
   grid-template-columns: auto auto;
   grid-template-rows: auto auto;
+  align-items: start;
 }
